<resources>

    <string name="google_maps_api_key" translatable="false">AIzaSyDZWjJe9peMql0cbSWMiDC-3Jfrb09gVU4</string>

    <string name="app_name">Store Locator</string>
    <string name="role_selector_textView">Register as:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_selector_textView">Select Language:</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_no">Phone No.</string>
    <string name="register_account">Register Account</string>
    <string name="register_as">Register as:</string>
    <string name="seller">Seller</string>
    <string name="customer">Customer</string>
    <string name="login">Login</string>
    <string name="login_as">Login as:</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signup">SignUp</string>
    <string name="store_login">Store Login</string>
    <string name="welcome">Welcome</string>
    <string name="login_unsuccessful">Login Unsuccessful</string>
    <string name="back">Back</string>
    <string name="title_activity_bottom_navigation" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_product_list">Product List</string>
    <string name="title_profile">Profile</string>
    <string name="store_name">Store Name</string>
    <string name="store_address">Store Address</string>
    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="locating_your_store">Locating your store…</string>
    <string name="title_activity_seller_navigation" translatable="false">MainActivity</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="title_activity_customer_location">Map</string>
    <string name="fetching_your_current_location">Fetching your current location</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name:</string>
    <string name="product_price">Product Price(In Rs.)</string>
    <string name="add_offer">Add Offer</string>
    <string name="product_image">Product Image:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="logging_in">Logging in...</string>
    <string name="show_qr_code">Show QR Code</string>
    <string name="get_your_store_address">Get Your Store Address</string>
    <string name="signing_in">Signing in...</string>
    <string name="add_discount_in">Add Discount(In %)</string>
    <string name="extra_offer">Extra Offer (Like: Buy 1 get 1 Free)</string>
    <string name="adding_product">Adding product...</string>
    <string name="select_product">Select Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="are_you_sure_you_want_to_purchase_this_product">Are you sure you want to purchase this product?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="invalid_qr_code">Invalid QR Code</string>
    <string name="purchase_successful">Discount Coupon Applied</string>
    <string name="note_you_have_to_add_extra_discount_for_app_users_nso_they_can_get_this_extra_discount_on_the_product_after_scanning_your_qr_code_only">(Note:- You have to add extra discount for App users,\nSo they can get this extra discount on the product after scanning your QR code only)</string>
    <string name="nearby_products">Nearby Products</string>
    <string name="more">MORE</string>
    <string name="selected_product">Selected Product:</string>
    <string name="product_details">Product Details:</string>
    <string name="original_price">Original Price:</string>
    <string name="store_name2">Store Name:</string>
    <string name="store_address2">Store Address:</string>
    <string name="store_timing">Store Timing:</string>
    <string name="scan_qr_code_to_buy_this_product">Scan QR Code to Buy this product:</string>
    <string name="note_scan_the_qr_code_to_redeem_extra_discount_on_this_product_you_can_get_the_qr_code_from_store_owner">(Note:- Scan the QR code to redeem extra discount on this product, You can get the QR Code from store owner)</string>Opening Time
    <string name="email2">Email :</string>
    <string name="phone_no2">Phone No. :</string>
    <string name="extra_discount_for_app_users_in">Extra discount for App users(In %)</string>
    <string name="product_detail">Product Detail</string>
    <string name="extra_offer2">Extra Offer:</string>
    <string name="no_of_times_purchased">No. of times purchased:</string>
    <string name="no_purchase_history_available">No Purchase History Available</string>
    <string name="product_price2">Product Price:</string>
    <string name="discount">Discount:</string>
    <string name="discount_price">Discount Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="total_price">Total Price:</string>
    <string name="purchase_time">Purchase Time:</string>
    <string name="your_qr_code_generated_successfully">Your QR code generated successfully</string>
    <string name="ok">OK</string>
    <string name="no_products_available">No Products Available</string>
    <string name="user_name2">User Name :</string>
    <string name="email1">Email :</string>
    <string name="phone_no1">Phone No. :</string>
    <string name="store_name1">Store Name :</string>
    <string name="store_address1">Store Address :</string>
    <string name="register_shop">Register Shop</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="store_timing1">Store Timing:</string>
    <string name="opening_time">Opening Time:</string>
    <string name="closing_time">Closing Time:</string>
    <string name="add_time">Add Time</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="Store_Login">Store Login</string>
    <string name="Seller_Registration">Seller Registration</string>
    <string name="Find_Shop_Location">Find Shop Location</string>
    <string name="Scan_QR_Code">Scan QR Code</string>
    <string name="Product_Details">Product Details</string>
    <string name="Nearby_Products">Nearby Products</string>
    <string name="Your_QR_Code">Your QR Code</string>
    <string name="Add_Product">Add Product</string>
    <string name="Edit_Product">Edit Product</string>
    <string name="Select_Product">Select Product</string>
    <string name="Purchase_History">Purchase History</string>
    <string name="History_Details">History Details</string>
    <string name="Find_Your_Location">Find Your Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="Updating_your_profile">Updating your profile</string>
    <string name="Change_Shop_Location">Change Shop Location</string>
    <string name="Edit_Your_Profile">Edit Your Profile</string>
    <string name="navigate_to_store">Navigate to Store</string>
    <string name="change_language">Change Language</string>
    <string name="resend">Resend</string>
    <string name="update">Update</string>
</resources>