<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seller_navigation"
    app:startDestination="@+id/seller_navigation_home">

    <fragment
        android:id="@+id/seller_navigation_home"
        android:name="com.example.storelocator.sellerLogin.ui.home.SellerHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_seller_home" >
        <action
            android:id="@+id/action_seller_navigation_home_to_QRCodeGenerator"
            app:destination="@id/QRCodeGenerator" />
        <action
            android:id="@+id/action_seller_navigation_home_to_addProductFragment"
            app:destination="@id/addProductFragment" />
        <action
            android:id="@+id/action_seller_navigation_home_to_editProductFragment"
            app:destination="@id/editProductFragment" />
        <action
            android:id="@+id/action_seller_navigation_home_to_purchaseHistoryFragment"
            app:destination="@id/purchaseHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/seller_navigation_dashboard"
        android:name="com.example.storelocator.sellerLogin.ui.productslist.SellerProductListFragment"
        android:label="@string/title_product_list"
        tools:layout="@layout/fragment_seller_product_list" >
        <action
            android:id="@+id/action_seller_navigation_dashboard_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/seller_navigation_notifications"
        android:name="com.example.storelocator.sellerLogin.ui.profile.SellerProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_seller_profile" >
        <action
            android:id="@+id/action_seller_navigation_notifications_to_QRCodeGenerator"
            app:destination="@id/QRCodeGenerator" />
        <action
            android:id="@+id/action_seller_navigation_notifications_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/QRCodeGenerator"
        android:name="com.example.storelocator.sellerLogin.ui.QRCodeGenerator"
        android:label="@string/Your_QR_Code"
        tools:layout="@layout/fragment_q_r_code_generator" >
        <action
            android:id="@+id/action_QRCodeGenerator_to_seller_navigation_home"
            app:destination="@id/seller_navigation_home"
            app:popUpTo="@id/seller_navigation_home"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_QRCodeGenerator_to_seller_navigation_notifications"
            app:destination="@id/seller_navigation_notifications"
            app:popUpTo="@id/seller_navigation_notifications"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.storelocator.sellerLogin.ui.home.addproduct.AddProductFragment"
        android:label="@string/Add_Product"
        tools:layout="@layout/fragment_add_product">
        <action
            android:id="@+id/action_addProductFragment_to_seller_navigation_home"
            app:destination="@id/seller_navigation_home"
            app:popUpTo="@id/seller_navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editProductFragment"
        android:name="com.example.storelocator.sellerLogin.ui.home.editproduct.EditProductFragment"
        android:label="@string/Edit_Product"
        tools:layout="@layout/fragment_edit_product" >
        <action
            android:id="@+id/action_editProductFragment_to_selectProductFragment"
            app:destination="@id/selectProductFragment" />
        <action
            android:id="@+id/action_editProductFragment_to_seller_navigation_home"
            app:destination="@id/seller_navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/selectProductFragment"
        android:name="com.example.storelocator.sellerLogin.ui.home.editproduct.SelectProductFragment"
        android:label="@string/Select_Product"
        tools:layout="@layout/fragment_select_product" >
        <action
            android:id="@+id/action_selectProductFragment_to_editProductFragment"
            app:destination="@id/editProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.storelocator.sellerLogin.ui.productslist.ProductDetailFragment"
        android:label="@string/Product_Details"
        tools:layout="@layout/fragment_product_detail"/>
    <fragment
        android:id="@+id/purchaseHistoryFragment"
        android:name="com.example.storelocator.sellerLogin.ui.home.purchasehistory.PurchaseHistoryFragment"
        android:label="@string/Purchase_History"
        tools:layout="@layout/fragment_purchase_history">
        <action
            android:id="@+id/action_purchaseHistoryFragment_to_purchaseHistoryDetailFragment"
            app:destination="@id/purchaseHistoryDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/purchaseHistoryDetailFragment"
        android:name="com.example.storelocator.sellerLogin.ui.home.purchasehistory.PurchaseHistoryDetailFragment"
        android:label="@string/History_Details"
        tools:layout="@layout/fragment_purchase_history_detail" />
    <fragment
        android:id="@+id/changeShopLocationFragment"
        android:name="com.example.storelocator.sellerLogin.ui.profile.ChangeShopLocationFragment"
        android:label="@string/Change_Shop_Location"
        tools:layout="@layout/fragment_change_shop_location"/>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.storelocator.sellerLogin.ui.profile.EditProfileFragment"
        android:label="@string/Edit_Your_Profile"
        tools:layout="@layout/fragment_edit_profile">
        <action
            android:id="@+id/action_editProfileFragment_to_changeShopLocationFragment"
            app:destination="@id/changeShopLocationFragment" />
    </fragment>
</navigation>