<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_google_pixel_4__4xl___1"
            android:padding="20dp"
            tools:context=".sellerLogin.ui.home.addproduct.AddProductFragment">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/add_product"
                android:textColor="@color/colorOnPrimary"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/product_name"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />


            <EditText
                android:id="@+id/etProductPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/product_price"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etProductName" />

            <EditText
                android:id="@+id/etAddDiscount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/add_discount_in"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etProductPrice" />

            <EditText
                android:id="@+id/etaddExtraOffer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/extra_offer"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddDiscount" />

            <EditText
                android:id="@+id/etAppDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittext_roundcorner"
                android:text="5"
                android:hint="@string/extra_discount_for_app_users_in"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etaddExtraOffer" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/note_you_have_to_add_extra_discount_for_app_users_nso_they_can_get_this_extra_discount_on_the_product_after_scanning_your_qr_code_only"
                android:textColor="@color/colorSecondary"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAppDiscount" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/product_image"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView24" />

            <ImageView
                android:id="@+id/ivAddProductImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_baseline_add_photo_alternate_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="167dp"
                android:layout_height="62dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/colorOnPrimary"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAddProductImage" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="167dp"
                android:layout_height="62dp"
                android:backgroundTint="@color/colorOnPrimary"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnCancel" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
