<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_google_pixel_4__4xl___1"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_marginTop="28dp"
                android:text="@string/register_account"
                android:textColor="@color/colorOnPrimary"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="68dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/user_name"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                android:textSize="20sp"
                android:focusedByDefault="true"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="38dp" />

            <EditText
                android:id="@+id/etrEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsername" />

            <EditText
                android:id="@+id/etrPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etrEmail" />

            <EditText
                android:id="@+id/etPhoneno"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/edittext_roundcorner"
                android:hint="@string/phone_no"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#575555"
                android:textSize="20sp"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/etrPassword"
                tools:layout_editor_absoluteX="24dp" />

            <Button
                android:id="@+id/btnBack"
                android:layout_width="167dp"
                android:layout_height="62dp"
                android:layout_marginTop="108dp"
                android:backgroundTint="@color/colorOnPrimary"
                android:text="@string/back"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneno" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="167dp"
                android:layout_height="62dp"
                android:backgroundTint="@color/colorOnPrimary"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/btnBack"
                app:layout_constraintTop_toTopOf="@+id/btnBack" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>